# jumbaw

./: .replit  README.md  pyproject.toml
SocialNexus/: .env.example  package-lock.json  package.json  pyproject.toml
SocialNexus/client/src/components/auth/: RegisterModal.tsx
SocialNexus/client/src/components/forum/: ThreadView.tsx
SocialNexus/client/src/components/ui/: form.tsx
SocialNexus/server/: index.ts  routes.ts  storage.ts  tc_validator.py
SocialNexus/shared/: schema.ts
